# sdl2_gui

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  SDL2_GUI.sln  cmakeclean.sh
SDL2_GUI/: CMakeLists.txt  ClassDiagram.cd  GUIButton.cpp  GUIButton.h  GUIComponent.cpp  GUIComponent.h  GUIComponentState.h  GUILabel.cpp  GUILabel.h  GUIManager.cpp  GUIManager.h  GUIPanel.cpp  GUIPanel.h  GUIScrollPanel.cpp  GUIScrollPanel.h  GUIScrollbar.cpp  GUIScrollbar.h  GUISpinner.cpp  GUISpinner.h  GUITextArea.cpp  GUITextArea.h  GUITextField.cpp  GUITextField.h  ReadMe.txt  SDL2_GUI.cpp  SDL2_GUI.h  SDL2_GUI.vcxproj  SDL2_GUI.vcxproj.filters
SDL2_GUI_Demo/: CMakeLists.txt  ReadMe.txt  SDL2_GUI_Demo.cpp  SDL2_GUI_Demo.h  SDL2_GUI_Demo.vcxproj  SDL2_GUI_Demo.vcxproj.filters  stdafx.cpp
cmakemodules/: FindSDL2_ttf.cmake
